# box-recommender-

./: .dockerignore  .env.example  .gitignore  AI_USAGE.md  CHAT_TRANSCRIPT.md  Dockerfile  README.md  TEST_OUTPUT.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: settings.py
docker/: entrypoint.sh
docs/: DESIGN.md
inventory/: admin.py  models.py  tests.py
inventory/management/commands/: seed_demo.py
inventory/migrations/: 0001_initial.py
orders/: admin.py  api.py  models.py  serializers.py  services.py  test_api.py  tests.py  urls.py
orders/migrations/: 0001_initial.py
selection/: __init__.py  engine.py  tests.py  types.py
